# mobile_robot_datn

ros2_ws/: build.sh  frames_2026-04-13_13.06.13.gv  frames_2026-05-08_11.03.40.gv  frames_2026-05-08_14.15.15.gv  frames_2026-05-11_11.46.50.gv  frames_2026-05-16_11.09.26.gv  frames_2026-05-17_16.24.27.gv  frames_2026-05-18_10.33.45.gv  patch_camera_viewer.py  patch_follow_camera_panel.py
ros2_ws/config/: active_fusion_map.env  waypoints_runtime.json
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/amr_interfaces/share/amr_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/amr_interfaces/share/amr_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  amr_interfacesConfig-version.cmake  amr_interfacesConfig.cmake  amr_interfaces__rosidl_typesupport_cExport.cmake  amr_interfaces__rosidl_typesupport_cppExport.cmake  amr_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_amr_interfaces__rosidl_generator_cExport.cmake  export_amr_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake
ros2_ws/install/amr_interfaces/share/amr_interfaces/environment/: ament_prefix_path.dsv  path.dsv
ros2_ws/install/amr_interfaces/share/amr_interfaces/msg/: AiAlert.msg  AiMode.idl  AiMode.msg
ros2_ws/install/amr_interfaces/share/amr_interfaces/rust/src/: msg.rs
ros2_ws/install/amr_interfaces/share/amr_interfaces/rust/src/msg/: rmw.rs
ros2_ws/install/amr_interfaces/share/amr_interfaces/srv/: SelectZone.idl  SelectZone.srv  SelectZone_Response.msg
ros2_ws/log/: latest_build
ros2_ws/scripts/: gazebo.sh  run_ai_follow.sh  run_alert_web.sh  run_camera_web.sh  run_engineer_web.sh  run_explore.sh  run_nav.sh  run_nav_fusion.sh  run_operator_gui.sh  run_slam.sh  run_teleop.sh  run_tracker_web.sh  run_waypoints.sh  run_web_teleop.sh  save_fusion.sh  save_fusion_map.sh  save_map.sh  start_amr_operator_stack.sh  start_device_stack.sh  start_navigation_mode.sh  start_slam_mode.sh  start_web_rosbridge.sh  stop_amr_operator_stack.sh  stop_device_stack.sh  stop_system_stack.sh  stop_web_rosbridge.sh  web_camera_low_latency.py  web_teleop_node.py
ros2_ws/src/amr_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/amr_ai/amr_ai/core/: ai_mode_manager_node.py  original_ai_main_reference.py
ros2_ws/src/amr_ai/amr_ai/detectors/: fire_smoke_detector.py
ros2_ws/src/amr_ai/amr_ai/gui/: operator_gui_node.py
ros2_ws/src/amr_ai/amr_ai/safety/: cmd_vel_safety_mux_node.py
ros2_ws/src/amr_ai/amr_ai/web/: engineer_web_server.py
ros2_ws/src/amr_ai/config/: ai_params.yaml
ros2_ws/src/amr_ai/launch/: amr_ai.launch.py
ros2_ws/src/amr_bringup/: setup.py
ros2_ws/src/amr_control/: CMakeLists.txt  package.xml
ros2_ws/src/amr_description/: CMakeLists.txt
ros2_ws/src/amr_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/amr_interfaces/msg/: PersonTarget.msg
ros2_ws/src/amr_navigation/: CMakeLists.txt
ros2_ws/src/amr_pointcloud_filter/: CMakeLists.txt
ros2_ws/src/amr_pointcloud_filter/install/: local_setup.sh  setup.bash  setup.sh
ros2_ws/src/amr_pointcloud_filter/install/amr_pointcloud_filter/share/amr_pointcloud_filter/: package.bash  package.dsv  package.ps1  package.sh
ros2_ws/src/amr_pointcloud_filter/log/: latest_build
ros2_ws/src/amr_pointcloud_filter/src/: depth_cloud_filter.cpp
ros2_ws/src/amr_sensors/: package.xml  setup.py
ros2_ws/src/amr_slam/: CMakeLists.txt  package.xml
ros2_ws/src/install/: local_setup.sh  setup.sh
(+766 files in other folders)
